# ml2service

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/examples/myproject/: models.py
src/ml2service/: cli.py  strict_typing.py
src/ml2service/models/: base.py  loader.py
src/ml2service/serializers/: base.py
src/ml2service/services/: base.py  dynamic.py  factories.py  static.py  stored.py
src/ml2service/services/runners/: base.py
src/ml2service/services/runners/fastapi/: factory.py  runner.py
src/ml2service/storages/: base.py  in_memory.py  memoize.py  serialized.py
tests/: conftest.py  test_cli.py
tests/myproject/: models.py
